// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component should NOT render <Message /> 1`] = `null`;

exports[`Message component should render <Message /> and compare with snapshot 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 5,
        },
        Object {},
      ]
    }
  >
    <View
      style={Object {}}
    >
      <Text
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#b2b2b2",
              "fontSize": 12,
              "fontWeight": "600",
            },
            Object {},
          ]
        }
      >
        Apr 8, 2019
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "marginRight": 0,
        },
        Object {
          "marginBottom": 10,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "marginRight": 60,
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View
              style={
                Array [
                  Object {},
                  undefined,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 5,
                    },
                    undefined,
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 16,
                          "lineHeight": 20,
                          "marginBottom": 5,
                          "marginLeft": 10,
                          "marginRight": 10,
                          "marginTop": 5,
                        },
                        undefined,
                        Object {},
                      ],
                      undefined,
                    ]
                  }
                >
                  test
                </Text>
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "marginBottom": 5,
                    "marginLeft": 10,
                    "marginRight": 10,
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#aaa",
                      "fontSize": 10,
                      "textAlign": "right",
                    },
                    undefined,
                  ]
                }
              >
                7:20 PM
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message component should render <Message /> with Avatar 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 5,
        },
        Object {},
      ]
    }
  >
    <View
      style={Object {}}
    >
      <Text
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#b2b2b2",
              "fontSize": 12,
              "fontWeight": "600",
            },
            Object {},
          ]
        }
      >
        Apr 8, 2019
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "marginRight": 0,
        },
        Object {
          "marginBottom": 10,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "marginRight": 8,
          },
          Object {},
          undefined,
        ]
      }
    >
      <View
        accessibilityTraits="image"
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 20,
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "transparent",
            },
            Array [
              Object {
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
              undefined,
            ],
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "marginRight": 60,
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View
              style={
                Array [
                  Object {},
                  undefined,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 5,
                    },
                    undefined,
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 16,
                          "lineHeight": 20,
                          "marginBottom": 5,
                          "marginLeft": 10,
                          "marginRight": 10,
                          "marginTop": 5,
                        },
                        undefined,
                        Object {},
                      ],
                      undefined,
                    ]
                  }
                >
                  test
                </Text>
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "marginBottom": 5,
                    "marginLeft": 10,
                    "marginRight": 10,
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#aaa",
                      "fontSize": 10,
                      "textAlign": "right",
                    },
                    undefined,
                  ]
                }
              >
                7:20 PM
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message component should render null if user has no Avatar 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 10,
          "marginTop": 5,
        },
        Object {},
      ]
    }
  >
    <View
      style={Object {}}
    >
      <Text
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#b2b2b2",
              "fontSize": 12,
              "fontWeight": "600",
            },
            Object {},
          ]
        }
      >
        Apr 8, 2019
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "marginRight": 0,
        },
        Object {
          "marginBottom": 10,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "marginRight": 60,
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View
              style={
                Array [
                  Object {},
                  undefined,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 5,
                    },
                    undefined,
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Array [
                        Object {
                          "color": "black",
                          "fontSize": 16,
                          "lineHeight": 20,
                          "marginBottom": 5,
                          "marginLeft": 10,
                          "marginRight": 10,
                          "marginTop": 5,
                        },
                        undefined,
                        Object {},
                      ],
                      undefined,
                    ]
                  }
                >
                  test
                </Text>
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "marginBottom": 5,
                    "marginLeft": 10,
                    "marginRight": 10,
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#aaa",
                      "fontSize": 10,
                      "textAlign": "right",
                    },
                    undefined,
                  ]
                }
              >
                7:20 PM
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
